--- a/project.json
+++ b/project.json
@@ -965,6 +965,15 @@
 		},
 		"/src/images/a644efc7660cd21ff220106b6518b84741f46fe3.h": {
 			"sdcard": false
+		},
+		"/src/images/18b6da209afaf1af4ad6e1759a174739bc24e157.png": {
+			"sdcard": false
+		},
+		"/src/images/42f6ab01d6f4f0cf011b3e92b4034b8d18653666.png": {
+			"sdcard": false
+		},
+		"/src/images/ffce61e8a61091733e1106e344a13ffb4de0d329.png": {
+			"sdcard": false
 		}
 	}
 }
