--- a/project.json
+++ b/project.json
@@ -974,6 +974,15 @@
 		},
 		"/src/images/ffce61e8a61091733e1106e344a13ffb4de0d329.png": {
 			"sdcard": false
+		},
+		"/src/images/18b6da209afaf1af4ad6e1759a174739bc24e157.h": {
+			"sdcard": false
+		},
+		"/src/images/42f6ab01d6f4f0cf011b3e92b4034b8d18653666.h": {
+			"sdcard": false
+		},
+		"/src/images/ffce61e8a61091733e1106e344a13ffb4de0d329.h": {
+			"sdcard": false
 		}
 	}
 }
