--- a/project.json
+++ b/project.json
@@ -1421,6 +1421,12 @@
 		},
 		"/src/images/Arrow_Dark.h": {
 			"sdcard": false
+		},
+		"/RogueBoy_Pokitto.bin.2.png": {
+			"sdcard": false
+		},
+		"/RogueBoy_Pokitto.bin.2.h": {
+			"sdcard": false
 		}
 	}
 }
