--- a/project.json
+++ b/project.json
@@ -2483,6 +2483,96 @@
 		},
 		"/RogueBoy_Pokitto_V01.bin": {
 			"sdcard": false
+		},
+		"/src/images/enemies/Spider16x16 copy.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_00_F0.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_01_F0.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_00_F0 copy.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F0.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F0 copy.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F1.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F0.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F1.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F1 copy.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F1 copy 2.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F0 copy 2.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F1 copy 3.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F0 copy 3.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_00_F1.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_02_F1.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_02_F0.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_06_F1.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_06_F0.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F0 copy.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F1 copy.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F0 copy 2.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F1 copy 2.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F0 copy 3.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F1 copy 3.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_01_F1.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_03_F0.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_03_F1.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_07_F0.png": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_07_F1.png": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
