--- a/project.json
+++ b/project.json
@@ -2573,6 +2573,54 @@
 		},
 		"/src/images/enemies/Spider_16_07_F1.png": {
 			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F0.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_04_F1.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_00_F0.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_02_F0.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_00_F1.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_02_F1.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F1.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_05_F0.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_03_F0.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_01_F1.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_01_F0.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_07_F0.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_07_F1.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_06_F1.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_06_F0.h": {
+			"sdcard": false
+		},
+		"/src/images/enemies/Spider_16_03_F1.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
