--- a/project.json
+++ b/project.json
@@ -3995,6 +3995,111 @@
 		},
 		"\\src\\maps\\MapSegments_Samples copy.h": {
 			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_Easy.h": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_Med.h": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_Small.h": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_Large.h": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom.h": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_SIze_00.h": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_Size_01.h": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_Size_02.h": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_Size_03.h": {
+			"sdcard": false
+		},
+		"\\src\\Game_TitleScreen copy.cpp": {
+			"sdcard": false
+		},
+		"\\src\\Game_MapDetails.cpp": {
+			"sdcard": false
+		},
+		"\\src\\maps\\MapRandom_Size_00.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Fireball - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_00.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_00 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_01.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_02.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_02.png.~tmp": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_06.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_04.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_04.png.~tmp": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_01 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_03.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_03 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_05.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_05 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_07.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_00.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_06.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_02.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_01.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_04.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_05.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_03.h": {
+			"sdcard": false
+		},
+		"\\src\\images\\scoreboard\\Direction_07.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
