--- a/project.json
+++ b/project.json
@@ -4757,6 +4757,15 @@
 		},
 		"\\src\\images\\ppot\\Ppot_Full.h": {
 			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_73 - Copy.png": {
+			"sdcard": false
+		},
+		"\\src\\images\\background\\Tile_73 - Copy.h": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.1.gif": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
