--- a/project.json
+++ b/project.json
@@ -5180,6 +5180,9 @@
 		},
 		"\\src\\images\\enemies\\43d1c38dae394b8181120e06df46868eb75a20bc.png": {
 			"sdcard": false
+		},
+		"\\src\\images\\enemies\\43d1c38dae394b8181120e06df46868eb75a20bc.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
